<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/commo_padding_min"
    android:background="@color/light_brown"
    tools:context=".activities.LoginActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_Salir"
            android:textColor="@color/text_color_reg"/>

    </Toolbar>


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_login"
        android:layout_marginTop="@dimen/marginTop_login"
        android:layout_marginLeft="@dimen/commo_padding_default"
        android:text="@string/user_name"
        android:textSize="@dimen/text_Size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_userName"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_login"
        android:layout_marginTop="@dimen/marginTop_login"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_login"
        android:layout_marginLeft="@dimen/commo_padding_default"
        android:layout_marginTop="@dimen/commo_padding_default"
        android:text="@string/password"
        android:textSize="@dimen/text_Size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_login"
        android:layout_marginTop="@dimen/commo_padding_default"
        app:layout_constraintStart_toEndOf="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@+id/ed_userName" />


    <TextView
        android:id="@+id/tv_Registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_reg"
        android:text="@string/link_Reg"
        android:layout_marginTop="@dimen/commo_padding_middle"
        android:layout_marginEnd="@dimen/commo_padding_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

    <Button
        android:id="@+id/btn_Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_ItemRB"
        android:text="@string/login_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Registro" />


</androidx.constraintlayout.widget.ConstraintLayout>