<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/commo_padding_min"
    android:background="@color/light_brown"
    tools:context=".views.Register.UserRegisterActivity">


    <TextView
        android:id="@+id/tv_regresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_Regresar"
        android:textColor="@color/text_color_reg"
        android:layout_marginStart="@dimen/commo_padding_min"
        android:layout_marginTop="@dimen/commo_padding_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@id/tvtitle"
        android:textSize="@dimen/text_Size_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_userRegister"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/commo_padding_middle"
        app:layout_constraintTop_toBottomOf="@id/tv_regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="@dimen/text_Size"
        android:layout_marginTop="@dimen/height_login"
        android:layout_marginStart="@dimen/commo_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle"
        />
    <EditText
        android:id="@+id/ed_firstName"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_login"
        android:text="PATOs"
        app:layout_constraintStart_toEndOf="@+id/tv_firstName"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle"
        android:layout_marginTop="@dimen/height_login"
        android:layout_marginStart="@dimen/commo_padding_min"
        />
    <TextView
        android:id="@+id/tv_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="@dimen/text_Size"
        android:layout_marginTop="@dimen/spacing_24dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_firstName"
        />
    <EditText
        android:id="@+id/ed_lastName"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_login"
        android:text="PAQUITOs"
        app:layout_constraintStart_toEndOf="@+id/tv_lastName"
        app:layout_constraintTop_toBottomOf="@+id/tv_firstName"
        android:layout_marginTop="@dimen/marginTop_ItemRB"
        android:layout_marginStart="@dimen/commo_padding_min"
        />
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/text_Size"
        android:layout_marginTop="@dimen/spacing_24dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lastName"
        />
    <EditText
        android:id="@+id/ed_email"
        android:layout_width="@dimen/with_email"
        android:text="admin@admin.com"
        android:layout_height="@dimen/height_login"
        app:layout_constraintStart_toEndOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_lastName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        />
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/text_Size"
        android:layout_marginTop="@dimen/spacing_24dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        />
    <EditText
        android:id="@+id/ed_pwd"
        android:layout_width="@dimen/edit_text_width2"
        android:layout_height="@dimen/height_login"
        android:text="123456789"
        app:layout_constraintStart_toEndOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        />
    <TextView
        android:id="@+id/tv_R_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeatPassword"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/spacing_24dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        />
    <EditText
        android:id="@+id/ed_repeat_pwd"
        android:layout_width="@dimen/edit_text_width_min"
        android:layout_height="@dimen/height_login"
        android:text="123456789"
        app:layout_constraintStart_toEndOf="@id/tv_R_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_pwd"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        />
    <TextView
        android:id="@+id/tv_birthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textSize="@dimen/text_Size"
        android:layout_marginTop="@dimen/spacing_24dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_R_password"
        />
    <TextView
        android:id="@+id/birthDate"
        android:layout_width="@dimen/edit_text_width_min2"
        android:layout_height="@dimen/height_login"
        android:textSize="@dimen/text_Size"
        android:text="DD-MM-AAAA"
        app:layout_constraintStart_toEndOf="@+id/tv_birthDate"
        app:layout_constraintTop_toBottomOf="@+id/ed_repeat_pwd"
        android:layout_marginTop="17dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        />

    <ImageView
        android:id="@+id/img_calendar"
        android:layout_width="@dimen/commo_padding_middle"
        android:layout_height="@dimen/commo_padding_middle"
        android:src="@drawable/calendar"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/birthDate"
        app:layout_constraintTop_toBottomOf="@id/ed_repeat_pwd"
        />

    <Button
        android:id="@+id/btn_userRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_text_Register"
        android:layout_marginTop="@dimen/commo_padding_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDate"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>