<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_item_recipebook"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_recipebook_height"
    android:layout_marginTop="@dimen/commo_padding_min"
    android:layout_marginHorizontal="@dimen/commo_padding_min">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="@dimen/marginTop_login"
        android:layout_height="@dimen/marginTop_login"
        android:background="@color/light_brown"
        android:contentDescription="@string/description_img_product"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_nombrePlatillo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NombrePlatillo"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/marginTop_ItemRB"
        android:layout_marginStart="@dimen/commo_padding_min"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_product"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commo_padding_middle"
        android:layout_marginStart="@dimen/commo_padding_min"
        android:text="@string/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toTopOf="@id/tv_nombrePlatillo" />


</androidx.constraintlayout.widget.ConstraintLayout>